--- a/newstyle.css
+++ b/newstyle.css
@@ -4,6 +4,7 @@
     align-items: center;
     padding: 5em;
 }
+
 .content {
     display: flex;
     flex-direction: row;
@@ -11,6 +12,7 @@
     justify-content: space-between;
     width: 100%;
 }
+
 input[type="search"] {
     border: none;
     background: #000000ab;
@@ -18,32 +20,42 @@ input[type="search"] {
     height: 3em;
     width: 20em;
 }
+
 button {
     border: none;
     border-radius: 10em;
     height: 3em;
     width: 3em;
 }
+
 .search {
     padding: 10px;
 }
+
 .prediction {
     display: flex;
     width: 100%;
     justify-content: space-between;
 }
-body{
+
+body {
     font-family: 'Open Sans', sans-serif;
+    color: white;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
     background-image: url(https://source.unsplash.com/1600x900/?landscape);
-    background-repeat: no-repeat; 
-    background-size: cover;
-    color: white !important;
+    background-repeat: no-repeat;
+
 }
-.locationAndTemperature{
+
+.locationAndTemperature {
     padding: 10px;
     background: rgb(7 7 7 / 84%);
 }
-.windHumidityPressure{
+
+.windHumidityPressure {
     padding: 10px;
     background: rgb(7 7 7 / 84%);
 }
