--- a/newstyle.css
+++ b/newstyle.css
@@ -50,12 +50,34 @@ body {
 
 }
 
+
 .locationAndTemperature {
+    width: 10em;
     padding: 10px;
     background: rgb(7 7 7 / 84%);
+    padding: 20px;
+    border-radius: 20px;
 }
 
 .windHumidityPressure {
     padding: 10px;
     background: rgb(7 7 7 / 84%);
+    /* height: 100%; */
+    padding-top: 70px;
+    padding-bottom: 55px;
+    border-radius: 20px;
+}
+.prediction {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+.day {
+    background: #000000cf;
+    margin: 5px;
+    border-radius: 20px;
+    padding: 5px;
+    height: 7em;
 }
